[build-system]
# Declaring a build-system is what flips `uv sync` from `source = { virtual }`
# (skips installing the project itself) to `source = { editable }` — without
# it the `synth_setter` package and `project.scripts` entry points never land
# in the venv. See #1245.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-setter"
version = "8.32.0"
description = "Studying the effect of permutation symmetry on audio synthesiser parameter inference."
authors = [{name = "Khaled Tinubu"}, {name = "tinaudio"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
# Lite import closure for the lite CI sites (validate_spec, ensure_r2_env_loaded,
# load_image_config); heavy runtime is in [dependency-groups]. Pinned by
# tests/infra/test_lite_dependency_base.py — see docs/reference/dependency-management.md (#1139).
dependencies = [
  "pydantic>=2",
  "python-dotenv",
  "pyyaml",
]

[project.optional-dependencies]
# Backend selector for `uv sync` / `uv lock` on Linux/Win — mutually exclusive
# (see [tool.uv].conflicts). The cpu/cu128 extras themselves are NOT platform-
# gated; the `sys_platform == 'linux' or sys_platform == 'win32'` markers
# live on the source routing in [tool.uv.sources]. On macOS, bare `uv sync`
# activates neither extra and falls through to the PyPI MPS-capable wheel via
# [project.dependencies]. Passing `--extra cpu` on macOS is harmless — the
# routing markers don't match, so torch still resolves from PyPI.
#   Linux GPU box  -> `uv sync --extra cu128`
#   Linux CPU CI   -> `uv sync --extra cpu --no-default-groups --group dev`
#   macOS          -> `uv sync`           (no backend flag needed)
#
# uv requires a `conflicts` group of >=2 entries, so a single-extra design
# (bare `uv sync` resolves to CUDA on Linux) is rejected by the resolver.
# cpu and cu128 package lists must stay byte-identical — only the index in
# [tool.uv.sources] differs. Bumping a version in one without the other
# produces a split lockfile with mismatched torch versions per backend.
cpu = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
]
cu128 = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
]

# Only the cpu/cu128 backend-routing extras remain here — [tool.uv.sources] keys
# on extras, not groups. Heavy runtime lives in [dependency-groups] (#1139).

[project.scripts]
synth-setter-train = "synth_setter.cli.train:main"
synth-setter-eval = "synth_setter.cli.eval:main"
synth-setter-generate-dataset = "synth_setter.cli.generate_dataset:main"
synth-setter-generate-dataset-from-hydra = "synth_setter.cli.generate_dataset:from_hydra"
synth-setter-finalize-dataset = "synth_setter.cli.finalize_dataset:main"
synth-setter-spec-uri = "synth_setter.pipeline.ci.spec_uri:main"















# PEP 735 groups hold the heavy runtime moved out of [project.dependencies]
# (#1139); pip never installs them and uv pip only with `--group`, so a plain
# `pip install -e .` keeps lite CI light. `runtime` aggregates every sub-group;
# `dev` (the default group) includes it.

























[dependency-groups]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "griffe-pydantic",
]
# torch stack routed per-platform in [tool.uv.sources]. lightning / torchmetrics
# are pure-python — they MUST NOT appear in [tool.uv.sources], or uv will try to
# resolve them from a torch index that doesn't host them.
torch = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "lightning>=2.6.0",
  "torchmetrics>=0.11.4",
]
config = [
  "hydra-core==1.3.2",
  "hydra-colorlog==1.2.0",
  "hydra-optuna-sweeper==1.2.0",
  "omegaconf",
  "pydantic-settings>=2",
  "tomli; python_version < '3.11'",
]
# `kubernetes` extra serves skypilot-local kind-cluster CI; locking it here
# keeps `uv sync --frozen` self-sufficient.
# Pin: kubernetes>=36 breaks SkyPilot pod_config validation — see #1239.
compute = [
  "skypilot[runpod,oci,kubernetes]==0.12.0",
  "runpod==1.8.1",
  "oci",
  "kubernetes==35.0.0",
]
data = [
  "dask[distributed]",
  "h5py",
  "hdf5plugin",
  "webdataset",
  "pandas",
  "numpy",
  "pylance>=7.0.0",
]
# Pin: scipy>=1.14,<1.15 — a hard ==1.14.1 patch-pin risks backtracking against
# torch / librosa / kymatio during lock resolution. See #1247.
audio = [
  "librosa",
  "pedalboard",
  "pyloudnorm",
  "mido",
  "scipy>=1.14,<1.15",
]
metrics = [
  "pesto-pitch==2.0.1",
  "dtw-python==1.7.4",
  "kymatio==0.3.0",
  "POT",
  "einops",
]
util = [
  "click<8.2",
  "structlog",
  "tenacity",
  "loguru==0.7.3",
  "rich",
  "sh",
  "threadpoolctl",
  "matplotlib",
  "tensorboard",
  "wandb",
]
runtime = [
  { include-group = "torch" },
  { include-group = "config" },
  { include-group = "compute" },
  { include-group = "data" },
  { include-group = "audio" },
  { include-group = "metrics" },
  { include-group = "util" },
]
dev = [
  "hypothesis",
  "mutmut==3.5.*",
  "pre-commit",
  "pyright==1.1.408",
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-randomly",
  "pytest-repeat",
  "pytest-xdist",
  # Required only by the v0.0.0 baseline `src/{train,eval}.py` that
  # tests/test_compare_baseline_configs.py runs through the live Python.
  # Not used by `synth_setter/` itself — see #1268.
  "rootutils",
  "ruff",
  { include-group = "docs" },
  { include-group = "runtime" },
]

[tool.uv]
# Bare `uv sync` installs `dev`, which transitively includes `runtime` (the full
# heavy stack), so local onboarding and the ~15 full-install sites are unchanged
# by the #1139 base trim. pip never installs PEP 735 groups and `uv pip` only
# with an explicit `--group`, so a plain `pip install -e .` keeps lite CI light.
default-groups = ["dev"]
# Tell the resolver `cpu` and `cu128` produce different torch wheels, so it
# locks each branch independently into the universal lockfile. Required when
# two extras route the same package to different indexes.
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# explicit = uv only consults this index for packages routed here by
# [tool.uv.sources]; it won't search it for unrelated packages.
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
# CUDA toolkit must be compatible with every GPU box's driver. cu128 wheels
# are forward-compatible with newer drivers; the only failure mode is a box
# whose driver is older than cu128. Update this URL + the index name if the
# fleet target shifts (e.g. cu126, cu130).
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Resolution per platform:
#   macOS                  -> no marker matches -> PyPI (MPS-capable wheel)
#   Linux/Win, --extra cu128 -> pytorch-cu128                       (GPU box)
#   Linux/Win, --extra cpu   -> pytorch-cpu                       (GPU-less CI)
# Bare `uv sync` on Linux/Win without a backend extra falls through to PyPI's
# universal torch wheel; pin an explicit `--extra cu128` or `--extra cpu` in
# production paths. All three torch packages must be listed — omitting one
# silently resolves it from PyPI and pins a wheel that mismatches the others.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",    extra = "cpu",   marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128",  extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu",    extra = "cpu",   marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128",  extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cpu",    extra = "cpu",   marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128",  extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]



[tool.setuptools.packages.find]
# PEP src-layout: ``synth_setter`` (regular package) plus the ``hydra_plugins``
# namespace package both live under ``src/``. ``namespaces = true`` is what
# lets Hydra auto-discover ``hydra_plugins.synth_setter_searchpath`` after a
# wheel install — see ``src/hydra_plugins/synth_setter_searchpath/__init__.py``.
where = ["src"]
namespaces = true

[tool.setuptools.package-dir]
"" = "src"

# Ship Hydra config YAMLs and the Linux Xvfb wrapper inside the wheel so
# ``importlib.resources.files("synth_setter")`` can locate them under any
# install layout — see ``src/synth_setter/resources.py``.
[tool.setuptools.package-data]
"synth_setter" = [
  "configs/**/*.yaml",
  "configs/**/*.yml",
  "scripts/*.sh",
]



[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
  "gpu: tests requiring a GPU",
  "mps: tests requiring Apple MPS (Metal)",
  "hypothesis: property-based tests (hypothesis)",
  "pipeline: pipeline integration tests",
  "benchmark: performance benchmarks",
  "requires_vst: requires a VST plugin binary — auto-skip keys on Surge XT presence; baked-in extra synth tests add per-bundle skips",
  "fake_vst: end-to-end tests that swap a duck-typed FakeVST3Plugin in place of a real VST",
  "r2: tests requiring R2/rclone access",
  "integration_r2: end-to-end launcher→R2 integration tests (auto-skipped without R2 creds; run in their own GHA workflow)",
  "docker_smoke: smoke tests that run inside the built Docker image",
  "network: tests that may make outbound network calls (e.g. `git fetch`)",
  "infra: tests that assert invariants of the devcontainer + GitHub Actions configuration",
]
minversion = "6.0"
pythonpath = ["src"]
testpaths = "tests/"



[tool.ruff]
target-version = "py310"
line-length = 99
exclude = ["logs", "data"]
# Legacy files excluded until per-file lint cleanup is done (see issue #25).
extend-exclude = []

[tool.ruff.lint]
# E=pycodestyle errors, F=pyflakes, I=isort, S=bandit security,
# T=T10 (print) + T20 (debugger), UP=pyupgrade, W=pycodestyle warnings,
# ANN001=missing-type-function-argument,
# D100/D101/D102/D103/D107=pydocstyle missing-docstring-on-{module,class,
# method,function,__init__} — together close pydoclint's "no docstring →
# skip checks" P1 blind spot (see #938). D205 enforces blank-line between
# summary and description (the shape sphinx and pydoclint's own parser
# assume). D401 nudges summaries toward imperative mood ("Return …", not
# "Returns …").
select = ["E", "F", "I", "S", "T", "UP", "W", "ANN001",
          "D100", "D101", "D102", "D103", "D107", "D205", "D401"]
# E501: line length handled by ruff-format, S101: allow assert in tests
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E702", "E722", "F841", "T201", "ANN001", "D102", "D103", "D107"]
"src/synth_setter/pipeline/data/add_music2latent.py" = ["S605", "D102", "D103", "D107"]
"src/synth_setter/evaluation/compute_audio_metrics.py" = ["T201", "ANN001", "D102", "D103", "D107"]
"src/synth_setter/pipeline/data/stats.py" = ["E402", "T201", "ANN001"]
"src/synth_setter/tools/sig_perf.py" = ["E402", "T201", "D102", "D103", "D107"]
"src/synth_setter/tools/model_from_wandb.py" = ["E402", "D102", "D103", "D107"]
"src/synth_setter/tools/paramspec_to_table.py" = ["E402", "T201", "D102", "D103", "D107"]
"src/synth_setter/tools/plot_param2tok.py" = ["E402", "E741", "F841", "T201", "D102", "D103", "D107"]
"src/synth_setter/evaluation/predict_vst_audio.py" = ["E402", "F841", "D102", "D103", "D107"]
# S603/S607: rclone subprocess calls use CLI args (user-controlled, not untrusted input).
# T201: click.echo used for CLI output.
"src/synth_setter/pipeline/data/r2_report.py" = ["S603", "S607", "T201", "D102", "D103", "D107"]
"src/synth_setter/pipeline/data/reshard.py" = ["T201"]
"src/synth_setter/pipeline/data/rewrite_to_latest.py" = ["ANN001", "D102", "D103", "D107"]
"src/synth_setter/tools/surge_xt_interactive.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/audio_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/fm_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/kosc_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/ksin_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/surge_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/vst/core.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/vst/generate_vst_dataset.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/vst/param_spec.py" = ["D102", "D103", "D107"]
"src/synth_setter/metrics.py" = ["D102", "D103", "D107"]
# S603/S607: rclone subprocess calls in R2 integration test fixtures.
"tests/pipeline/data/test_r2_report.py" = ["S603", "S607"]
# ANN001: pytest fixture-injected args left un-annotated on legacy callsites.
"tests/tools/test_surge_xt_interactive.py" = ["ANN001"]
"tests/pipeline/ci_config/test_load_image_config.py" = ["D102", "D103", "D107"]
"tests/pipeline/schemas/test_dataset_spec.py" = ["ANN001", "D102", "D103", "D107"]
"tests/pipeline/schemas/test_prefix.py" = ["ANN001", "D102", "D103", "D107"]
"tests/test_benchmarks.py" = ["ANN001", "D102", "D103", "D107"]
"tests/test_compare_baseline_configs.py" = ["D102", "D103", "D107"]
"tests/test_configs.py" = ["ANN001", "D102", "D103", "D107"]
"tests/test_logging_utils.py" = ["D102", "D103", "D107"]
"src/synth_setter/cli/eval.py" = ["E402", "F841", "D102", "D103", "D107"]
# ANN001: directory-wide ignore for legacy untyped function args under synth_setter/models/.
# New code under synth_setter/models/ should still annotate; remove this entry once legacy
# callsites are cleaned up.
"src/synth_setter/models/**" = ["ANN001"]
"src/synth_setter/models/components/loss.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/cnn.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/embed_pool.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/residual_mlp.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/sinkhorn.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/transformer.py" = ["F841", "D102", "D103", "D107"]
"src/synth_setter/models/components/vae.py" = ["E402", "T201", "D102", "D103", "D107"]
"src/synth_setter/models/components/vector_field.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/ksin_ff_module.py" = ["F821", "D102", "D103", "D107"]
"src/synth_setter/models/surge_ff_module.py" = ["F821", "D102", "D103", "D107"]
"src/synth_setter/models/ksin_flow_matching_module.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/surge_flow_matching_module.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/surge_flowvae_module.py" = ["D102", "D103", "D107"]
"src/synth_setter/cli/train.py" = ["E402", "D102", "D103", "D107"]
"src/synth_setter/utils/__init__.py" = ["F401"]
"src/synth_setter/utils/callbacks.py" = ["F821", "T201", "ANN001", "D102", "D103", "D107"]
"src/synth_setter/utils/instantiators.py" = ["D102", "D103", "D107"]
"src/synth_setter/utils/rich_utils.py" = ["D102", "D103", "D107"]
"src/synth_setter/utils/utils.py" = ["D102", "D103", "D107"]



[tool.interrogate]
verbose = 2
fail-under = 80
ignore-init-module = true
ignore-init-method = true
ignore-module = true
ignore-nested-functions = true

# wrap-summaries = 0 (not 99): a wrapped summary's 2nd line trips ruff D205, which
# no tool auto-fixes. Pinned by tests/infra/test_docstring_tooling_consistency.py.
[tool.docformatter]
wrap-summaries = 0
wrap-descriptions = 99
style = "sphinx"
black = true

# pydoclint: signature ↔ docstring consistency checks. Rule families documented
# at https://jsh9.github.io/pydoclint/violation_codes.html. Sphinx style chosen
# to match existing :param:/:return: docstrings and [tool.docformatter] above.

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = true
check-style-mismatch = true
require-return-section-when-returning-nothing = false
skip-checking-raises = false
skip-checking-short-docstrings = false
allow-init-docstring = true
check-class-attributes = true
# Read `# noqa: DOCxxx` from the def line (flake8/ruff convention) rather
# than from the closing-`"""` line. The pydoclint CLI default is
# "docstring"; flipping to "definition" aligns suppressions with the rest
# of this repo's lint stack so contributors don't get a silently inert
# suppression. See the adversarial probe summary on #939 and #938.
native-mode-noqa-location = "definition"
# Legacy violations are pinned in .pydoclint-baseline.txt (one row per
# (file, line, rule code)). New violations — including in files that
# used to be on the path exclude list — fail the hook. Audit baseline
# diffs in PR reviews; cleanup chunks delete rows. See #938.
baseline = ".pydoclint-baseline.txt"
# Disabled so pydoclint won't silently shrink the baseline when a contributor
# fixes a row's underlying violation. Regenerate manually with
# `pydoclint --generate-baseline=1 src/ tests/ scripts/` and commit the diff.
# Otherwise a successful fix produces a "no new violations, count unchanged"
# outcome that's hard to reason about. Tracked under #938.
auto-regenerate-baseline = false
# Path-level exclude regex (verbose). Infra-only after the baseline swap —
# tests/fixtures/ retained because tests/fixtures/baseline_repo and diff_repo
# are mock-repo data shelled out to by the test suite (conceptually adjacent
# to notebooks/: code-but-not-production-code), not legacy violations to
# clean up via the baseline.
exclude = '''(?x)
    (^|/)\.git(/|$)
  | (^|/)\.tox(/|$)
  | (^|/)\.venv(/|$)
  | ^build/
  | ^dist/
  | ^node_modules/
  | ^\.claude/
  | ^\.worktrees/
  | ^notebooks/
  | ^tests/fixtures/
'''

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"

# Major bumps: handled by default via "feat!:" prefix or "BREAKING CHANGE:" footer
# Pre-1.0: breaking changes bump minor (standard semver pre-1.0 behavior)
[tool.semantic_release.commit_parser_options]
allowed_tags = ["automation", "build", "chore", "ci", "docs", "feat", "fix", "internal-feat", "internal-fix", "monitoring", "perf", "refactor", "revert", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "revert"]



[tool.coverage.run]
source = ["src/synth_setter", "scripts/ci"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
relative_files = true
omit = ["**/__main__.py"]


[tool.coverage.paths]
source = ["src/synth_setter", "*/src/synth_setter"]
scripts = ["scripts/ci", "*/scripts/ci"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.\\s*$",
]



[tool.mutmut]
# Phase 4 moved the previously-scripts/-resident Python tools into
# src/synth_setter/{evaluation,tools,pipeline/data}/; scripts/ci/ retains the
# job-queue CLI used by .github/workflows/job-queue*.yaml.
paths_to_mutate = [
    "src/synth_setter/evaluation/",
    "src/synth_setter/tools/",
    "src/synth_setter/pipeline/data/",
    "scripts/ci/",
]
tests_dir = [
    "tests/evaluation/",
    "tests/tools/",
    "tests/pipeline/data/",
    "tests/scripts/ci/",
]
# mutmut copies only `paths_to_mutate` into `mutants/` and strips the real
# `src/` off `sys.path` (see mutmut/__main__.py:setup_source_paths). Without
# `also_copy`, transitive imports from the un-mutated rest of the package
# (e.g. `synth_setter.cli`, `synth_setter.pipeline.r2_io`) fail with
# ImportError during stats collection. Copy the whole package so the sandbox
# can resolve them.
also_copy = ["src/synth_setter/"]
pytest_add_cli_args = ["-m", "not slow and not requires_vst and not r2 and not gpu and not benchmark"]
